--- a/13_REACT/moviesapp/src/App.css
+++ b/13_REACT/moviesapp/src/App.css
@@ -93,3 +93,12 @@
   display:flex ;
   justify-content: center;
 }
+
+.genre-selector{
+  padding: 3rem;
+}
+
+.favourites-table{
+  padding: 3rem;
+}
+
