--- a/11_Browser/Project-1_Jira_Ticket_clone/style.css
+++ b/11_Browser/Project-1_Jira_Ticket_clone/style.css
@@ -120,8 +120,8 @@ body{
     
 }
 .ticket-cont{
-    height: 10rem;
-    width: 12rem;
+    height: 15rem;
+    width: 14rem;
     background-color: bisque;
 }
 .ticket-color{
@@ -136,9 +136,13 @@ body{
     height: calc(100% - 1rem - 2rem - 2rem);
     font-size: 1.5rem;
     padding: 5px;
+    outline: none;
+    word-wrap: break-word;
+    overflow-y: scroll;
 }
 
 .lock-ticket{
+    
    font-size: 1.5rem;
     display: flex;
     justify-content:flex-end;
